fix css overlap

--- a/VollyV2/wwwroot/css/home.opportunities.css
+++ b/VollyV2/wwwroot/css/home.opportunities.css
@@ -2,3 +2,57 @@
     width: 100%;
     max-height: 100%;
 }
+
+
+.wrap-map {
+    position: fixed;
+    right: 0;
+}
+
+#toggleMap {
+    display: none;
+}
+
+@media (max-width:768px) {
+    #toggleMap {
+        display: unset;
+    }
+
+    #searchNearMe {
+        display: none;
+    }
+
+    .wrap-map {
+        position: relative !important;
+    }
+
+    .map {
+        float: unset;
+    }
+
+    .wrap-toggle {
+        right: unset;
+        left: 0;
+        position: absolute !important;
+        margin-bottom: 15px;
+        height: 100%;
+    }
+
+    #wrap-main {
+        margin-top: 15px;
+    }
+
+    #map {
+        opacity: 0;
+        height: 0;
+    }
+}
+
+.wrap-toggle {
+    text-align: center;
+    visibility: visible;
+    position: fixed;
+    right: 0;
+    z-index: 100;
+    margin-right: 15px;
+}
